@@ -4,16 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.9</version>
-        <relativePath/>
-    </parent>
 
     <groupId>SongScribe</groupId>
     <artifactId>SongScribe</artifactId>
-    <version>1.21</version>
+    <version>2.0.0</version>
     <packaging>jar</packaging>
 
     <description>
@@ -23,12 +17,14 @@
     <url>https://songscribe.org/</url>
 
     <properties>
+        <maven.compiler.source>25</maven.compiler.source>
+        <maven.compiler.target>25</maven.compiler.target>
         <build.version>${maven.build.timestamp}</build.version>
         <project.dist.directory>${project.build.directory}/dist</project.dist.directory>
         <project.download.directory>${project.build.directory}/download</project.download.directory>
         <maven.build.timestamp.format>yyyyMMdd</maven.build.timestamp.format>
         <jarName>${project.artifactId}</jarName>
-        <kotlin.version>2.1.0</kotlin.version>
+        <kotlin.version>2.3.0</kotlin.version>
     </properties>
 
     <scm>
@@ -104,19 +100,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <version>3.3.3</version>
-        </dependency>
-        <dependency>
             <groupId>org.apache.httpcomponents.client5</groupId>
             <artifactId>httpclient5</artifactId>
-            <version>5.3.1</version>
+            <version>5.6</version>
         </dependency>
         <dependency>
-            <groupId>com.itextpdf</groupId>
-            <artifactId>itextpdf</artifactId>
-            <version>5.5.13.4</version>
+            <groupId>org.jfree</groupId>
+            <artifactId>org.jfree.pdf</artifactId>
+            <version>2.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.swinglabs</groupId>
@@ -124,21 +115,14 @@
             <version>1.0.3</version>
         </dependency>
         <dependency>
-            <groupId>com.jtechlabs</groupId>
-            <artifactId>jdirectorychooser</artifactId>
-            <version>1.1.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/libs/jdirectorychooser-1.1.0.jar</systemPath>
-        </dependency>
-        <dependency>
             <groupId>com.formdev</groupId>
             <artifactId>flatlaf</artifactId>
-            <version>3.5.1</version>
+            <version>3.7</version>
         </dependency>
         <dependency>
             <groupId>com.formdev</groupId>
             <artifactId>flatlaf-extras</artifactId>
-            <version>3.5.1</version>
+            <version>3.7</version>
         </dependency>
         <dependency>
             <groupId>com.intellij</groupId>
@@ -164,12 +148,12 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>5.11.0</version>
+            <version>5.21.0</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.11.0-M2</version>
+            <version>6.0.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -195,7 +179,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>2.5</version>
+                <version>3.5.0</version>
                 <configuration>
                     <finalName>${jarName}</finalName>
                     <archive>
@@ -205,7 +189,6 @@
                             <classpathPrefix>libs</classpathPrefix>
                         </manifest>
                         <manifestEntries>
-                            <Class-Path>libs/jdirectorychooser-1.1.0.jar</Class-Path>
                             <Implementation-Build>${project.version}.${build.version}</Implementation-Build>
                         </manifestEntries>
                     </archive>
@@ -214,7 +197,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>2.8</version>
+                <version>3.9.0</version>
                 <executions>
                     <execution>
                         <id>copy-dependencies</id>
@@ -234,7 +217,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>2.6</version>
+                <version>3.4.0</version>
                 <configuration>
                     <encoding>UTF-8</encoding>
                 </configuration>
@@ -305,9 +288,9 @@
             </plugin>
 
             <plugin>
-                <groupId>org.codehaus.gmaven</groupId>
-                <artifactId>gmaven-plugin</artifactId>
-                <version>1.5</version>
+                <groupId>org.codehaus.gmavenplus</groupId>
+                <artifactId>gmavenplus-plugin</artifactId>
+                <version>3.0.2</version>
                 <executions>
                     <execution>
                         <id>generate-Version-java</id>
@@ -316,18 +299,20 @@
                             <goal>execute</goal>
                         </goals>
                         <configuration>
-                            <source>
-                                File dir = new File("${project.build.sourceDirectory}/songscribe/")
-                                dir.mkdirs()
-                                new File(dir, "Version.java").withWriter { out ->
-                                out.println '// This is an auto generated code. DO NOT MODIFY!'
-                                out.println 'package songscribe;'
-                                out.println 'public final class Version {'
-                                out.println ' public static final String PUBLIC_VERSION="${project.version}";'
-                                out.println ' public static final String BUILD_VERSION="${build.version}";'
-                                out.println '}'
-                                }
-                            </source>
+                            <scripts>
+                                <script>
+                                    File dir = new File("${project.build.sourceDirectory}/songscribe/")
+                                    dir.mkdirs()
+                                    new File(dir, "Version.java").withWriter { out ->
+                                    out.println '// This is an auto generated code. DO NOT MODIFY!'
+                                    out.println 'package songscribe;'
+                                    out.println 'public final class Version {'
+                                    out.println ' public static final String PUBLIC_VERSION="${project.version}";'
+                                    out.println ' public static final String BUILD_VERSION="${build.version}";'
+                                    out.println '}'
+                                    }
+                                </script>
+                            </scripts>
                         </configuration>
                     </execution>
                     <execution>
@@ -337,16 +322,26 @@
                             <goal>execute</goal>
                         </goals>
                         <configuration>
-                            <source>
-                                File dir = new File("${project.download.directory}")
-                                dir.mkdirs()
-                                new File(dir, "version-${os.family.name}.json").withWriter { out ->
-                                out.println '{"downloadFile": "${project.artifactId}-${project.version}.${jpackage.build.type}","buildVersion": "${build.version}"}'
-                                }
-                            </source>
+                            <scripts>
+                                <script>
+                                    File dir = new File("${project.download.directory}")
+                                    dir.mkdirs()
+                                    new File(dir, "version-${os.family.name}.json").withWriter { out ->
+                                    out.println '{"downloadFile": "${project.artifactId}-${project.version}.${jpackage.build.type}","buildVersion": "${build.version}"}'
+                                    }
+                                </script>
+                            </scripts>
                         </configuration>
                     </execution>
                 </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.groovy</groupId>
+                        <artifactId>groovy</artifactId>
+                        <version>4.0.30</version>
+                        <scope>runtime</scope>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -413,13 +408,13 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <jvmTarget>21</jvmTarget>
+                    <jvmTarget>25</jvmTarget>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>3.14.1</version>
                 <executions>
                     <execution>
                         <id>default-compile</id>
@@ -448,9 +443,8 @@
                     <fork>true</fork>
                     <encoding>UTF-8</encoding>
                     <verbose>true</verbose>
-                    <source>21</source>
-                    <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>25</source>
+                    <target>25</target>
                 </configuration>
             </plugin>
         </plugins>
